// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/DatePicker DatePicker 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="css-1kvol9r"
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-hzcvm6-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-o66dxn-TextInputWrapper"
            >
              <div
                className="css-1itf0jn-TextInputWrapper"
              >
                <div
                  className="css-1awzrh3-TextInputWrapper"
                >
                  <div
                    className="css-1u4znjd"
                  >
                    <input
                      className="css-cl7pv4"
                      disabled={false}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="MM/DD/YYYY - MM/DD/YYYY "
                      required={false}
                      value=""
                    />
                  </div>
                  <div
                    className="css-mt0mcx-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-137pzfe-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/DatePicker DayPicker 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="css-1kvol9r"
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-hzcvm6-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-cl7pv4"
                disabled={false}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="MM/DD/YYYY "
                required={false}
                styleType="filled"
              />
            </div>
            <div
              className="css-mt0mcx-IconWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-1uy5s4y-Icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/DatePicker DayPicker with disabled dates 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="css-1kvol9r"
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-hzcvm6-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-cl7pv4"
                disabled={false}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="MM/DD/YYYY "
                required={false}
                styleType="filled"
              />
            </div>
            <div
              className="css-mt0mcx-IconWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-1uy5s4y-Icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/DatePicker DayPicker with predefined values 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="css-1kvol9r"
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-hzcvm6-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-cl7pv4"
                disabled={false}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="MM/DD/YYYY "
                required={false}
                styleType="filled"
                value="02/19/2021"
              />
            </div>
            <div
              className="css-mt0mcx-IconWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-1uy5s4y-Icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/DatePicker Dynamic disableDates with all options available - Knobs 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="css-1kvol9r"
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-hzcvm6-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-cl7pv4"
                disabled={false}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="MM/DD/YYYY "
                required={false}
                styleType="filled"
              />
            </div>
            <div
              className="css-mt0mcx-IconWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-1uy5s4y-Icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
